Remove citations from text in index.html

--- a/index.html
+++ b/index.html
@@ -166,27 +166,27 @@
         <section class="reveal">
             <h2 class="section-title">À Propos</h2>
             <div style="text-align: center; max-width: 800px; margin: auto;">
-                <p>Future diplômée en Marketing Digital, je combine une approche analytique rigoureuse avec une sensibilité artistique affirmée[cite: 7].</p>
-                <p>Maîtrisant les fondamentaux de la relation client et de la data, j'aspire à concevoir des expériences de marque qui font sens[cite: 8, 9].</p>
+                <p>Future diplômée en Marketing Digital, je combine une approche analytique rigoureuse avec une sensibilité artistique affirmée.</p>
+                <p>Maîtrisant les fondamentaux de la relation client et de la data, j'aspire à concevoir des expériences de marque qui font sens.</p>
             </div>
         </section>
 
         <div class="grid" style="margin-top: 50px;">
             <article class="card reveal">
                 <h3>Expérience Professionnelle</h3>
-                <p><strong>ORLIVRAISON</strong> | Juin - Juillet 2025 [cite: 19, 22, 23]</p>
+                <p><strong>ORLIVRAISON</strong> | Juin - Juillet 2025 </p>
                 <ul>
-                    <li>Prospection & Leviers de croissance[cite: 25].</li>
-                    <li>Conception de supports marketing visuels[cite: 26].</li>
-                    <li>Audit de satisfaction client & UX[cite: 27].</li>
+                    <li>Prospection & Leviers de croissance.</li>
+                    <li>Conception de supports marketing visuels.</li>
+                    <li>Audit de satisfaction client & UX.</li>
                 </ul>
             </article>
 
             <article class="card reveal">
                 <h3>Parcours Académique</h3>
-                <p><strong>DUT Marketing Digital & Commercial</strong><br>EST | 2025 - 2026 [cite: 11, 12, 15]</p>
+                <p><strong>DUT Marketing Digital & Commercial</strong><br>EST | 2025 - 2026 </p>
                 <hr>
-                <p><strong>Baccalauréat Sciences Économiques</strong><br>2024 [cite: 16, 17]</p>
+                <p><strong>Baccalauréat Sciences Économiques</strong><br>2024 </p>
             </article>
         </div>
 
@@ -195,20 +195,20 @@
             <div class="grid">
                 <div class="card">
                     <h4>Langues [cite: 28]</h4>
-                    <span class="tag">Arabe: Maternelle [cite: 29]</span>
-                    <span class="tag">Anglais: Avancé [cite: 30]</span>
-                    <span class="tag">Français: Intermédiaire [cite: 31]</span>
+                    <span class="tag">Arabe: Maternelle </span>
+                    <span class="tag">Anglais: Avancé </span>
+                    <span class="tag">Français: Intermédiaire </span>
                 </div>
                 <div class="card">
-                    <h4>Univers Créatif [cite: 32]</h4>
-                    <p>Photographie, Journaling, Design et Veille Marketing[cite: 33, 34, 35].</p>
+                    <h4>Univers Créatif </h4>
+                    <p>Photographie, Journaling, Design et Veille Marketing.</p>
                 </div>
             </div>
         </section>
     </main>
 
     <footer>
-        <p>mmoutahmilkhadija@gmail.com | Salé, Maroc [cite: 3, 4]</p>
+        <p>mmoutahmilkhadija@gmail.com | Salé, Maroc </p>
         <a href="Khadija_Moutahamil (1).pdf" class="cv-button" target="_blank">
             <i class="fas fa-file-pdf"></i> Télécharger mon CV (PDF)
         </a>
