--- a/index.html
+++ b/index.html
@@ -5,214 +5,203 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moutahamil Khadija | Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;700;800&family=Plus+Jakarta+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+    
     <style>
         :root {
-            --primary: #1a1a1a;
-            --accent: #007bff;
-            --bg: #fdfdfd;
-            --text: #333;
-            --light-grey: #f4f4f4;
+            --bg: #050505;
+            --card-bg: rgba(255, 255, 255, 0.03);
+            --accent: #3d5afe; 
+            --text-main: #ffffff;
+            --text-secondary: #a0a0a0;
+            --border: rgba(255, 255, 255, 0.08);
         }
 
-        * { box-sizing: border-box; }
+        * { margin: 0; padding: 0; box-sizing: border-box; scroll-behavior: smooth; }
 
         body {
-            font-family: 'Poppins', sans-serif;
-            margin: 0;
             background-color: var(--bg);
-            color: var(--text);
+            color: var(--text-main);
+            font-family: 'Plus Jakarta Sans', sans-serif;
             line-height: 1.6;
-            overflow-x: hidden;
         }
 
-        /* Animations */
-        @keyframes fadeInUp {
-            from { opacity: 0; transform: translateY(30px); }
-            to { opacity: 1; transform: translateY(0); }
+        .glow {
+            position: fixed;
+            top: 0; left: 0; width: 100%; height: 100%;
+            background: radial-gradient(circle at 50% -20%, rgba(61, 90, 254, 0.15), transparent 50%);
+            z-index: -1;
         }
 
-        .reveal { animation: fadeInUp 0.8s ease forwards; }
-
-        /* Header & Photo */
         header {
-            min-height: 100vh;
+            height: 100vh;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             text-align: center;
-            background: linear-gradient(135deg, #1a1a1a 0%, #333 100%);
-            color: white;
-            padding: 40px 20px;
+            padding: 20px;
         }
 
-        .profile-container {
-            width: 200px;
-            height: 200px;
-            border-radius: 50%;
-            overflow: hidden;
-            border: 5px solid var(--accent);
-            margin-bottom: 20px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
-        }
-
-        .profile-container img {
-            width: 100%;
-            height: 100%;
+        .profile-img {
+            width: 160px;
+            height: 160px;
+            border-radius: 40px;
             object-fit: cover;
+            border: 1px solid var(--border);
+            margin-bottom: 30px;
+            transition: 0.5s ease;
         }
 
-        header h1 { font-size: 3rem; margin: 10px 0; letter-spacing: 2px; }
-        header p { font-size: 1.2rem; color: #ccc; max-width: 700px; }
-
-        .social-links { margin-top: 25px; }
-        .social-links a {
-            color: white;
-            font-size: 1.8rem;
-            margin: 0 15px;
-            transition: 0.3s;
-        }
-        .social-links a:hover { color: var(--accent); transform: scale(1.2); }
-
-        /* Sections */
-        .container { max-width: 1100px; margin: auto; padding: 60px 20px; }
-        
-        .section-title {
-            text-align: center;
-            font-size: 2rem;
-            margin-bottom: 50px;
+        header h1 {
+            font-family: 'Syne', sans-serif;
+            font-size: clamp(2.5rem, 8vw, 5rem);
             text-transform: uppercase;
-            letter-spacing: 3px;
-        }
-        .section-title::after {
-            content: '';
-            display: block;
-            width: 50px;
-            height: 3px;
-            background: var(--accent);
-            margin: 10px auto;
+            letter-spacing: -2px;
+            margin-bottom: 15px;
         }
 
-        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 30px; }
+        .content { max-width: 1100px; margin: 0 auto; padding: 60px 20px; }
+
+        .section-header {
+            margin: 60px 0 30px;
+            border-left: 4px solid var(--accent);
+            padding-left: 20px;
+        }
+
+        .section-header h2 { font-family: 'Syne', sans-serif; font-size: 2.2rem; text-transform: uppercase; }
+
+        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 25px; }
 
         .card {
-            background: white;
-            padding: 30px;
-            border-radius: 15px;
-            box-shadow: 0 10px 20px rgba(0,0,0,0.05);
-            transition: 0.4s;
-            border-bottom: 4px solid transparent;
-        }
-        .card:hover { transform: translateY(-10px); border-bottom: 4px solid var(--accent); }
-
-        .card h3 { color: var(--accent); margin-top: 0; }
-
-        /* CV Button & Footer */
-        footer {
-            background: var(--primary);
-            color: white;
-            text-align: center;
-            padding: 60px 20px;
-            margin-top: 80px;
-        }
-
-        .cv-button {
-            display: inline-flex;
-            align-items: center;
-            gap: 10px;
-            background: var(--accent);
-            color: white;
-            padding: 15px 30px;
-            border-radius: 50px;
-            text-decoration: none;
-            font-weight: bold;
+            background: var(--card-bg);
+            border: 1px solid var(--border);
+            padding: 35px;
+            border-radius: 30px;
+            backdrop-filter: blur(10px);
             transition: 0.3s;
-            box-shadow: 0 5px 15px rgba(0,123,255,0.3);
         }
-        .cv-button:hover { background: #0056b3; transform: translateY(-3px); }
+
+        .card:hover { border-color: var(--accent); transform: translateY(-5px); }
+
+        .project-card {
+            background: linear-gradient(145deg, rgba(61, 90, 254, 0.1), rgba(255, 255, 255, 0.02));
+            border: 1px solid rgba(61, 90, 254, 0.3);
+            padding: 40px;
+            border-radius: 30px;
+            text-decoration: none;
+            color: inherit;
+            display: block;
+            transition: 0.4s;
+        }
+
+        .project-card:hover {
+            border-color: var(--accent);
+            box-shadow: 0 10px 30px rgba(61, 90, 254, 0.2);
+        }
 
         .tag {
             display: inline-block;
-            background: var(--light-grey);
-            padding: 5px 15px;
-            border-radius: 20px;
-            margin: 5px;
-            font-size: 0.85rem;
-            font-weight: 600;
+            background: var(--accent);
+            color: white;
+            padding: 4px 12px;
+            border-radius: 100px;
+            font-size: 0.75rem;
+            margin: 4px;
+            font-weight: bold;
         }
 
-        @media (max-width: 768px) {
-            header h1 { font-size: 2.2rem; }
+        footer { padding: 100px 20px; text-align: center; }
+
+        .social-links { margin-bottom: 30px; }
+        .social-links a { color: var(--text-main); font-size: 1.5rem; margin: 0 15px; transition: 0.3s; }
+        .social-links a:hover { color: var(--accent); }
+
+        .cv-btn {
+            display: inline-block;
+            text-decoration: none;
+            color: var(--bg);
+            background: var(--text-main);
+            padding: 18px 40px;
+            border-radius: 100px;
+            font-weight: 800;
+            font-family: 'Syne', sans-serif;
+            transition: 0.4s;
         }
+
+        .cv-btn:hover { background: var(--accent); color: white; box-shadow: 0 0 30px rgba(61, 90, 254, 0.4); }
+
+        .passion-text { margin-top: 50px; font-size: 0.7rem; letter-spacing: 4px; opacity: 0.3; text-transform: uppercase; }
     </style>
 </head>
 <body>
 
+    <div class="glow"></div>
+
     <header>
-        <div class="profile-container reveal">
-            <img src="https://lh3.googleusercontent.com/d/1_Lqxo1NF1mU5SbPeXdiOlN8qCq8fDqoD" alt="Moutahamil Khadija">
-        </div>
-        <h1 class="reveal">MOUTAHAMIL KHADIJA</h1>
-        <p class="reveal">Marketing Digital | Stratégie Commerciale | Création de Contenu</p>
-        <div class="social-links reveal">
-            <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="https://www.kaggle.com/code/moutahmilkhadija/dataset-1" target="_blank"><i class="fab fa-kaggle"></i></a>
-        </div>
+        <img src="https://drive.google.com/uc?export=view&id=1_Lqxo1NF1mU5SbPeXdiOlN8qCq8fDqoD" alt="Khadija" class="profile-img">
+        <h1>Moutahamil<br>Khadija</h1>
+        <p style="color: var(--accent); font-weight: 600; letter-spacing: 3px;">MARKETING DIGITAL | STRATÉGIE | CONTENU</p>
     </header>
 
-    <main class="container">
-        <section class="reveal">
-            <h2 class="section-title">À Propos</h2>
-            <div style="text-align: center; max-width: 800px; margin: auto;">
-                <p>Future diplômée en Marketing Digital, je combine une approche analytique rigoureuse avec une sensibilité artistique affirmée.</p>
-                <p>Maîtrisant les fondamentaux de la relation client et de la data, j'aspire à concevoir des expériences de marque qui font sens.</p>
-            </div>
+    <main class="content">
+        <section class="section-header">
+            <h2>À Propos</h2>
+            <p style="color: var(--text-secondary); margin-top: 15px;">
+                Future diplômée en Marketing Digital, je combine une approche analytique rigoureuse avec une sensibilité artistique affirmée.
+            </p>
         </section>
 
-        <div class="grid" style="margin-top: 50px;">
-            <article class="card reveal">
-                <h3>Expérience Professionnelle</h3>
-                <p><strong>ORLIVRAISON</strong> | Juin - Juillet 2025 </p>
-                <ul>
-                    <li>Prospection & Leviers de croissance.</li>
-                    <li>Conception de supports marketing visuels.</li>
-                    <li>Audit de satisfaction client & UX.</li>
-                </ul>
-            </article>
-
-            <article class="card reveal">
-                <h3>Parcours Académique</h3>
-                <p><strong>DUT Marketing Digital & Commercial</strong><br>EST | 2025 - 2026 </p>
-                <hr>
-                <p><strong>Baccalauréat Sciences Économiques</strong><br>2024 </p>
-            </article>
+        <div class="grid">
+            <div class="card">
+                <h3 style="color: var(--accent); margin-bottom: 15px;">Expérience</h3>
+                <p><strong>ORLIVRAISON</strong> | 2025</p>
+                <p style="color: var(--text-secondary); font-size: 0.9rem;">Prospection, Visuels Marketing & Audit satisfaction.</p>
+            </div>
+            <div class="card">
+                <h3 style="color: var(--accent); margin-bottom: 15px;">Formation</h3>
+                <p><strong>DUT Marketing Digital</strong></p>
+                <p style="color: var(--text-secondary); font-size: 0.9rem;">EST | 2025 - 2026</p>
+            </div>
         </div>
 
-        <section style="margin-top: 80px;" class="reveal">
-            <h2 class="section-title">Compétences & Intérêts</h2>
-            <div class="grid">
-                <div class="card">
-                    <h4>Langues [cite: 28]</h4>
-                    <span class="tag">Arabe: Maternelle </span>
-                    <span class="tag">Anglais: Avancé </span>
-                    <span class="tag">Français: Intermédiaire </span>
-                </div>
-                <div class="card">
-                    <h4>Univers Créatif </h4>
-                    <p>Photographie, Journaling, Design et Veille Marketing.</p>
-                </div>
-            </div>
+        <section class="section-header">
+            <h2>Compétences</h2>
         </section>
+        <div class="grid">
+            <div class="card">
+                <h3>Langues</h3>
+                <div class="tag">Arabe</div><div class="tag">Anglais</div><div class="tag">Français</div>
+            </div>
+            <div class="card">
+                <h3>Intérêts</h3>
+                <p style="color: var(--text-secondary);">Photographie, Journaling, Design et Psychologie du consommateur.</p>
+            </div>
+        </div>
+
+        <section class="section-header">
+            <h2>Projet</h2>
+        </section>
+        <a href="https://www.kaggle.com/code/moutahmilkhadija/dataset-1" target="_blank" class="project-card">
+            <h3 style="color: var(--accent); margin-bottom: 10px;"><i class="fab fa-kaggle"></i> Exploratory Data Analysis</h3>
+            <p style="color: var(--text-secondary);">This work presents an exploratory data analysis conducted on a Kaggle dataset, focusing on data cleaning, visualization, and interpretation to extract meaningful insights.</p>
+            <p style="margin-top: 15px; font-weight: bold; font-size: 0.8rem; color: var(--accent);">VOIR LE PROJET <i class="fas fa-arrow-right"></i></p>
+        </a>
+
     </main>
 
     <footer>
-        <p>mmoutahmilkhadija@gmail.com | Salé, Maroc </p>
-        <a href="Khadija_Moutahamil (1).pdf" class="cv-button" target="_blank">
-            <i class="fas fa-file-pdf"></i> Télécharger mon CV (PDF)
-        </a>
+        <div class="social-links">
+            <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://github.com" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://www.kaggle.com/" target="_blank"><i class="fab fa-kaggle"></i></a>
         </div>
+
+        <a href="https://drive.google.com/file/d/1uEPxlyho3G6I0iQe6PB-VM1GQz9YKiAM/view?usp=sharing" class="cv-btn" target="_blank">
+            <i class="fas fa-file-pdf"></i> Mon CV Overleaf
+        </a>
+
+        <p class="passion-text">Créé avec passion par Khadija</p>
     </footer>
 
 </body>
