--- a/index.html
+++ b/index.html
@@ -43,14 +43,15 @@
             padding: 20px;
         }
 
+        /* Fixed Image Rendering */
         .profile-img {
-            width: 160px;
-            height: 160px;
+            width: 180px;
+            height: 180px;
             border-radius: 40px;
             object-fit: cover;
-            border: 1px solid var(--border);
+            border: 2px solid var(--accent);
             margin-bottom: 30px;
-            transition: 0.5s ease;
+            box-shadow: 0 0 20px rgba(61, 90, 254, 0.3);
         }
 
         header h1 {
@@ -59,9 +60,10 @@
             text-transform: uppercase;
             letter-spacing: -2px;
             margin-bottom: 15px;
+            line-height: 1;
         }
 
-        .content { max-width: 1100px; margin: 0 auto; padding: 60px 20px; }
+        .content { max-width: 1100px; margin: 0 auto; padding: 40px 20px; }
 
         .section-header {
             margin: 60px 0 30px;
@@ -84,6 +86,7 @@
 
         .card:hover { border-color: var(--accent); transform: translateY(-5px); }
 
+        /* Project Card Styling */
         .project-card {
             background: linear-gradient(145deg, rgba(61, 90, 254, 0.1), rgba(255, 255, 255, 0.02));
             border: 1px solid rgba(61, 90, 254, 0.3);
@@ -93,6 +96,7 @@
             color: inherit;
             display: block;
             transition: 0.4s;
+            margin-top: 20px;
         }
 
         .project-card:hover {
@@ -114,11 +118,13 @@
         footer { padding: 100px 20px; text-align: center; }
 
         .social-links { margin-bottom: 30px; }
-        .social-links a { color: var(--text-main); font-size: 1.5rem; margin: 0 15px; transition: 0.3s; }
-        .social-links a:hover { color: var(--accent); }
+        .social-links a { color: var(--text-main); font-size: 1.8rem; margin: 0 15px; transition: 0.3s; }
+        .social-links a:hover { color: var(--accent); transform: scale(1.2); display: inline-block; }
 
         .cv-btn {
-            display: inline-block;
+            display: inline-flex;
+            align-items: center;
+            gap: 10px;
             text-decoration: none;
             color: var(--bg);
             background: var(--text-main);
@@ -139,7 +145,7 @@
     <div class="glow"></div>
 
     <header>
-        <img src="https://drive.google.com/uc?export=view&id=1_Lqxo1NF1mU5SbPeXdiOlN8qCq8fDqoD" alt="Khadija" class="profile-img">
+        <img src="https://drive.google.com/uc?export=view&id=1_Lqxo1NF1mU5SbPeXdiOlN8qCq8fDqoD" alt="Khadija Moutahamil" class="profile-img">
         <h1>Moutahamil<br>Khadija</h1>
         <p style="color: var(--accent); font-weight: 600; letter-spacing: 3px;">MARKETING DIGITAL | STRATÉGIE | CONTENU</p>
     </header>
@@ -147,8 +153,9 @@
     <main class="content">
         <section class="section-header">
             <h2>À Propos</h2>
-            <p style="color: var(--text-secondary); margin-top: 15px;">
-                Future diplômée en Marketing Digital, je combine une approche analytique rigoureuse avec une sensibilité artistique affirmée.
+            <p style="color: var(--text-secondary); margin-top: 15px; font-size: 1.1rem;">
+                Future diplômée en Marketing Digital, je combine une approche analytique rigoureuse avec une sensibilité artistique affirmée. 
+                Maîtrisant les fondamentaux de la relation client, j'aspire à concevoir des expériences de marque qui font sens.
             </p>
         </section>
 
@@ -156,12 +163,17 @@
             <div class="card">
                 <h3 style="color: var(--accent); margin-bottom: 15px;">Expérience</h3>
                 <p><strong>ORLIVRAISON</strong> | 2025</p>
-                <p style="color: var(--text-secondary); font-size: 0.9rem;">Prospection, Visuels Marketing & Audit satisfaction.</p>
+                <p style="color: var(--text-secondary); font-size: 0.9rem; margin-top: 10px;">
+                    Prospection, Conception de supports visuels & Audit de satisfaction client.
+                </p>
             </div>
             <div class="card">
                 <h3 style="color: var(--accent); margin-bottom: 15px;">Formation</h3>
                 <p><strong>DUT Marketing Digital</strong></p>
-                <p style="color: var(--text-secondary); font-size: 0.9rem;">EST | 2025 - 2026</p>
+                <p style="color: var(--text-secondary); font-size: 0.9rem;">EST Salé | 2025 - 2026</p>
+                <br>
+                <p><strong>Baccalauréat Économie</strong></p>
+                <p style="color: var(--text-secondary); font-size: 0.9rem;">2024</p>
             </div>
         </div>
 
@@ -174,7 +186,7 @@
                 <div class="tag">Arabe</div><div class="tag">Anglais</div><div class="tag">Français</div>
             </div>
             <div class="card">
-                <h3>Intérêts</h3>
+                <h3>Univers</h3>
                 <p style="color: var(--text-secondary);">Photographie, Journaling, Design et Psychologie du consommateur.</p>
             </div>
         </div>
@@ -185,9 +197,8 @@
         <a href="https://www.kaggle.com/code/moutahmilkhadija/dataset-1" target="_blank" class="project-card">
             <h3 style="color: var(--accent); margin-bottom: 10px;"><i class="fab fa-kaggle"></i> Exploratory Data Analysis</h3>
             <p style="color: var(--text-secondary);">This work presents an exploratory data analysis conducted on a Kaggle dataset, focusing on data cleaning, visualization, and interpretation to extract meaningful insights.</p>
-            <p style="margin-top: 15px; font-weight: bold; font-size: 0.8rem; color: var(--accent);">VOIR LE PROJET <i class="fas fa-arrow-right"></i></p>
+            <p style="margin-top: 20px; font-weight: bold; color: var(--accent);">VOIR SUR KAGGLE <i class="fas fa-external-link-alt"></i></p>
         </a>
-
     </main>
 
     <footer>
