Add profile image to index.html
Added a profile image to the portfolio page.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moutahamil Khadija | Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;700;800&family=Plus+Jakarta+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+    <img src="https://drive.google.com/uc?export=view&id=1_Lqxo1NF1mU5SbPeXdiOlN8qCq8fDqoD" alt="Moutahamil Khadija" class="profile-img animate">
     
     <style>
         :root {
