Revise index.html with new content and styles
Updated profile image, added new font styles, and refined text content.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moutahamil Khadija | Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <img src="https://drive.google.com/uc?export=view&id=1_Lqxo1NF1mU5SbPeXdiOlN8qCq8fDqoD" alt="Moutahamil Khadija" class="profile-img animate">
+    <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;700;800&family=Plus+Jakarta+Sans:wght@300;400;600&display=swap" rel="stylesheet">
     
     <style>
         :root {
@@ -43,7 +43,6 @@
             padding: 20px;
         }
 
-        /* Fixed Image Rendering */
         .profile-img {
             width: 180px;
             height: 180px;
@@ -51,7 +50,7 @@
             object-fit: cover;
             border: 2px solid var(--accent);
             margin-bottom: 30px;
-            box-shadow: 0 0 20px rgba(61, 90, 254, 0.3);
+            box-shadow: 0 0 25px rgba(61, 90, 254, 0.3);
         }
 
         header h1 {
@@ -86,7 +85,6 @@
 
         .card:hover { border-color: var(--accent); transform: translateY(-5px); }
 
-        /* Project Card Styling */
         .project-card {
             background: linear-gradient(145deg, rgba(61, 90, 254, 0.1), rgba(255, 255, 255, 0.02));
             border: 1px solid rgba(61, 90, 254, 0.3);
@@ -119,7 +117,7 @@
 
         .social-links { margin-bottom: 30px; }
         .social-links a { color: var(--text-main); font-size: 1.8rem; margin: 0 15px; transition: 0.3s; }
-        .social-links a:hover { color: var(--accent); transform: scale(1.2); display: inline-block; }
+        .social-links a:hover { color: var(--accent); transform: scale(1.1); display: inline-block; }
 
         .cv-btn {
             display: inline-flex;
@@ -145,34 +143,35 @@
     <div class="glow"></div>
 
     <header>
-        <img src="https://drive.google.com/uc?export=view&id=1_Lqxo1NF1mU5SbPeXdiOlN8qCq8fDqoD" alt="Khadija Moutahamil" class="profile-img">
-        <h1>Moutahamil<br>Khadija</h1>
-        <p style="color: var(--accent); font-weight: 600; letter-spacing: 3px;">MARKETING DIGITAL | STRATÉGIE | CONTENU</p>
+        <img src="https://lh3.googleusercontent.com/d/1_Lqxo1NF1mU5SbPeXdiOlN8qCq8fDqoD" alt="MOUTAHAMIL KHADIJA" class="profile-img">
+        <h1>MOUTAHAMIL<br>KHADIJA</h1>
+        <p style="color: var(--accent); font-weight: 600; letter-spacing: 3px;">Marketing Digital | Stratégie Commerciale | Création de Contenu</p>
     </header>
 
     <main class="content">
         <section class="section-header">
             <h2>À Propos</h2>
             <p style="color: var(--text-secondary); margin-top: 15px; font-size: 1.1rem;">
-                Future diplômée en Marketing Digital, je combine une approche analytique rigoureuse avec une sensibilité artistique affirmée. 
-                Maîtrisant les fondamentaux de la relation client, j'aspire à concevoir des expériences de marque qui font sens.
+                Future diplômée en Marketing Digital, je combine une approche analytique rigoureuse avec une sensibilité artistique affirmée. Maîtrisant les fondamentaux de la relation client et de la data, j'aspire à concevoir des expériences de marque qui font sens.
             </p>
         </section>
 
         <div class="grid">
             <div class="card">
                 <h3 style="color: var(--accent); margin-bottom: 15px;">Expérience</h3>
-                <p><strong>ORLIVRAISON</strong> | 2025</p>
-                <p style="color: var(--text-secondary); font-size: 0.9rem; margin-top: 10px;">
-                    Prospection, Conception de supports visuels & Audit de satisfaction client.
-                </p>
+                <p><strong>ORLIVRAISON</strong> | Juin - Juillet 2025</p>
+                <ul style="margin-top: 15px; font-size: 0.9rem; color: var(--text-secondary); padding-left: 15px;">
+                    <li style="margin-bottom: 8px;">Prospection et identification de leviers de croissance.</li>
+                    <li style="margin-bottom: 8px;">Conception de supports marketing visuels.</li>
+                    <li>Audit de satisfaction client et optimisation UX.</li>
+                </ul>
             </div>
             <div class="card">
                 <h3 style="color: var(--accent); margin-bottom: 15px;">Formation</h3>
-                <p><strong>DUT Marketing Digital</strong></p>
+                <p><strong>DUT Marketing Digital & Commercial</strong></p>
                 <p style="color: var(--text-secondary); font-size: 0.9rem;">EST Salé | 2025 - 2026</p>
                 <br>
-                <p><strong>Baccalauréat Économie</strong></p>
+                <p><strong>Baccalauréat Sciences Économiques</strong></p>
                 <p style="color: var(--text-secondary); font-size: 0.9rem;">2024</p>
             </div>
         </div>
@@ -186,8 +185,8 @@
                 <div class="tag">Arabe</div><div class="tag">Anglais</div><div class="tag">Français</div>
             </div>
             <div class="card">
-                <h3>Univers</h3>
-                <p style="color: var(--text-secondary);">Photographie, Journaling, Design et Psychologie du consommateur.</p>
+                <h3>Intérêts</h3>
+                <p style="color: var(--text-secondary);">Photographie, Journaling, Design et Veille Marketing (Psychologie du consommateur).</p>
             </div>
         </div>
 
@@ -197,22 +196,21 @@
         <a href="https://www.kaggle.com/code/moutahmilkhadija/dataset-1" target="_blank" class="project-card">
             <h3 style="color: var(--accent); margin-bottom: 10px;"><i class="fab fa-kaggle"></i> Exploratory Data Analysis</h3>
             <p style="color: var(--text-secondary);">This work presents an exploratory data analysis conducted on a Kaggle dataset, focusing on data cleaning, visualization, and interpretation to extract meaningful insights.</p>
-            <p style="margin-top: 20px; font-weight: bold; color: var(--accent);">VOIR SUR KAGGLE <i class="fas fa-external-link-alt"></i></p>
+            <p style="margin-top: 20px; font-weight: bold; color: var(--accent);">VIEW ON KAGGLE <i class="fas fa-external-link-alt"></i></p>
         </a>
     </main>
 
     <footer>
         <div class="social-links">
-            <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-            <a href="https://github.com" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="https://www.kaggle.com/" target="_blank"><i class="fab fa-kaggle"></i></a>
+            <a href="https://linkedin.com" target="_blank" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://github.com" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+            <a href="https://www.kaggle.com/" target="_blank" title="Kaggle"><i class="fab fa-kaggle"></i></a>
         </div>
 
         <a href="https://drive.google.com/file/d/1uEPxlyho3G6I0iQe6PB-VM1GQz9YKiAM/view?usp=sharing" class="cv-btn" target="_blank">
             <i class="fas fa-file-pdf"></i> Mon CV Overleaf
         </a>
 
-        <p class="passion-text">Créé avec passion par Khadija</p>
     </footer>
 
 </body>
